# gppm

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.stage.yml  docker-compose.yml
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/versions/: 148b19293610_create_group.py  359ab8aacbb9_add_access_entity.py  5266868c2621_create_context.py  73d724432768_add_context_id_to_access.py  9ee534d043cb_rename_column_in_context.py  bb6c5e4149a0_cascade_delete_for_all.py  cf46f5cf713e_add_role_to_access.py  e39e0665b282_removed_unnecessary.py
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/core/: config.py  security.py
backend/app/app/core/auth/: __init__.py  auth_base.py  auth_database.py  auth_ldap.py
backend/app/app/crud/: __init__.py  crud_access.py  crud_base.py  crud_context.py  crud_user.py
backend/app/app/db/: base.py  greenplum.py  init_db.py  orm_types.py  session.py
backend/app/app/models/: __init__.py  access.py  context.py  user.py
backend/app/app/read_model/: __init__.py  gp_toolkit.py  pg_catalog.py  pg_relkind.py
backend/app/app/schemas/: __init__.py  access.py  acl_database.py  acl_schema.py  acl_table.py  context.py  msg.py  owner_owner.py  privilege_acl.py  privilege_default.py  privilege_grant.py  privilege_graph.py  privilege_privilege.py  resource_available_limits.py  resource_resource.py  role_groups.py  role_member.py  role_role.py  token.py  user.py
backend/app/app/use_case/: exceptions.py
backend/app/app/use_case/acl/: __init__.py  (+4 more)
(+127 files in other folders)
