[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend part for GreenPlum Permission Manager"
authors = ["Ostap Konstantinov <konstantinov.ov@dns-shop.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.68.2"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^6.3.1"
pydantic = "^1.7.4"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.7"
sqlalchemy = "^1.4.35"
pytest = "^6.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
attrs="^21.4.0"
loguru="^0.5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^19.10b0"
isort = "^5.9.3"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.9.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

